Bug 96364 - DRAW: SVG: Color needs to be parsed before fill, stroke or stop-color elements
Summary: DRAW: SVG: Color needs to be parsed before fill, stroke or stop-color elements
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: SVG-Open
  Show dependency treegraph
 
Reported: 2015-12-09 17:08 UTC by Xisco Faulí
Modified: 2018-06-20 17:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Box should be green (3.10 KB, image/svg+xml)
2015-12-09 17:08 UTC, Xisco Faulí
Details
fill and stroke (3.31 KB, image/svg+xml)
2015-12-10 10:51 UTC, Xisco Faulí
Details
stop-color (642 bytes, image/svg+xml)
2015-12-10 10:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2015-12-09 17:08:12 UTC
Created attachment 121176 [details]
Box should be green

Info: http://www.w3.org/TR/SVGTiny12/styling.html --> "'color', which is used to provide a potential indirect value (currentColor) for the 'fill', 'stroke' and 'stop-color' properties"
Comment 1 Xisco Faulí 2015-12-10 10:51:54 UTC
Created attachment 121194 [details]
fill and stroke
Comment 2 Xisco Faulí 2015-12-10 10:52:20 UTC
Created attachment 121195 [details]
stop-color
Comment 3 A (Andy) 2015-12-20 21:44:26 UTC
Reproducible with LO 5.0.3.2, Win 8.1

green box file: no box instead of green filled box

fill and stroke file: non-filled box with green border instead of green filled box with red border

stop-color file: black box instead of green gradient box
Comment 4 Xisco Faulí 2015-12-21 10:03:09 UTC
A fix for the issue is waiting for review in gerrit: https://gerrit.libreoffice.org/#/c/20653/
Comment 5 Commit Notification 2016-01-08 09:38:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5821c8949e543e672cf55e29001b3e7964d070af

tdf#96364 SVG: Parse 'color' and 'style' before the rest of attributes

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.