tdf#96364 SVG: Parse 'color' and 'style' before the rest of attributes

'fill', 'stroke' and 'stop-color' might depend on them

Change-Id: I8b709dafe0ad0423a87911af7f2c83fa81e61cbd